<resources>
    <string name="app_name">android50</string>
    <string name="user_albums">Albums</string>

    <!--Strings for home screen-->
    <string name="create_album">Create Album</string>
    <string name="delete_album">Delete Album</string>
    <string name="rename_album">Rename Album</string>
    <string name="search_photos">Search</string>

    <string name="album_name">Album Name</string>
    <string name="num_photos">Number of Photos</string>
    <string name="delete_album_btn">Delete</string>
    <string name="rename_album_btn">Rename</string>

    <!-- Strings used for add edit album -->
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>

    <!-- Strings for insideAlbum -->
    <string name="photo_label">Photo</string>

    <!--Activity titles -->
    <string name="title_activity_add_edit_album">Add or Edit Album</string>
    <string name="title_activity_inside_album">Inside Album</string>
    <string name="title_activity_display_photo">Display Photo</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="location_toggle">Location</string>
    <string name="person_toggle">Person</string>
    <string name="value">Value</string>
    <string name="and">AND</string>
    <string name="or">OR</string>

    <string name="albumLbl">Album</string>
    <string name="saveLbl">Save</string>
    <string name="cancelLbl">Cancel</string>

    <string name="addTag">Add Tag</string>
    <string name="back">Back</string>
    <string name="tagLbl">Enter Tag</string>
    <string name="moveBtn">Move Photo</string>
    <string name="chooseAlbumAlert">Please choose album to move to:</string>
    <string name="confirmAlbumMove">Ok</string>
    <string name="cancelAlbumMove">Cancel</string>


    <string name="searchLbl">Search By One or Two Tags</string>
    <string name="clearLbl">Clear</string>

    <string name="addPhoto">Add Photo</string>
    <string name="slideshow">Begin Slideshow</string>


</resources>