<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEditAlbum">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="20dp">

        <!--  Name label -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/tagLbl" />

        <!-- Name field -->

        <!--  Year label -->

        <!-- Year field -->

        <!--  Director label -->

        <!-- Director field -->

        <!--  Buttons for save and cancel -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/typeBtn"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:textOff="@string/location_toggle"
                android:textOn="@string/person_toggle" />

            <EditText
                android:id="@+id/tag_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:drawable/editbox_background"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/tag_add"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:onClick="add"
                android:text="@string/addTag"
                android:textSize="16sp"
                app:backgroundTint="#FFFFFF" />

            <Button
                android:id="@+id/tag_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:onClick="cancel"
                android:text="@string/cancelLbl"
                android:textSize="16sp"
                app:backgroundTint="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>