<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Name label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/album_name" />

    <!-- Name field -->
    <EditText
        android:id="@+id/edit_album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background" />

    <!-- Buttons for save and cancel -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/album_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:background="@color/design_default_color_primary_variant"
            android:onClick="save"
            android:text="@string/save_label"
            android:textColor="@color/design_default_color_surface"
            android:textSize="16sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/album_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/design_default_color_primary_variant"
            android:onClick="cancel"
            android:text="@string/cancel_label"
            android:textColor="@color/design_default_color_surface"
            android:textSize="16sp"
            app:backgroundTint="@null" />

    </LinearLayout>


</LinearLayout>